Updated styles the to fix that are broken on last update

--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,7 @@ body{
     display: flex;
     flex-direction: row;
     align-content: center;
-    justify-content: space-between;
-    height: 50px;
+    justify-content: space-around;
 }
 
 #storeMenu{
@@ -109,7 +108,6 @@ body{
     flex-direction: row;
     align-content: center;
     justify-content: space-around;
-    height: 50px;
 }
 
 #createStore {
